[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qto"
version = "1.0.0"
description = ""
authors = [
    { name = "jiang7f", email = "jiang7ff@163.com" }
]
requires-python = ">=3.10"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
